Refactor: PageResponse 클래스 삭제로 인한 API 및 문서 수정
