# src/main/java/com/growup/pms/status/controller/StatusControllerV1.java
@@ -5,7 +5,6 @@ import com.growup.pms.common.aop.annotation.RequirePermission;
 import com.growup.pms.role.domain.PermissionType;
 import com.growup.pms.status.controller.dto.request.StatusCreateRequest;
 import com.growup.pms.status.controller.dto.request.StatusEditRequest;
-import com.growup.pms.status.controller.dto.response.PageResponse;
 import com.growup.pms.status.controller.dto.response.StatusResponse;
 import com.growup.pms.status.service.StatusService;
 import jakarta.validation.Valid;
@@ -48,11 +47,12 @@ public class StatusControllerV1 {
 
 
     @GetMapping
-    public ResponseEntity<PageResponse<List<StatusResponse>>> getStatuses(@PathVariable Long projectId) {
+    @RequirePermission(PermissionType.PROJECT_STATUS_READ)
+    public ResponseEntity<List<StatusResponse>> getStatuses(@PathVariable Long projectId) {
         log.debug("StatusControllerV1#getStatuses called.");
         log.debug("projectId={}", projectId);
 
-        PageResponse<List<StatusResponse>> response = statusService.getStatuses(projectId);
+        List<StatusResponse> response = statusService.getStatuses(projectId);
         log.debug("response={}", response);
 
         return ResponseEntity.ok(response);
