# src/main/resources/static/docs/openapi3.yaml
@@ -24,7 +24,7 @@ paths:
       tags:
       - Team
       summary: 팀 생성
-      description: "사용자가 새로운 팀을 생성합니다. 생성 시, 다른 사용자를 함께 팀으로 초대할 수 있습니다."
+      description: 팀을 생성합니다.
       operationId: team-controller-v1-docs-test/팀_생성_api_문서를_생성한다사용자가_팀을_생성_시에/성공한다
       parameters:
       - name: Content-Type
@@ -40,6 +40,12 @@ paths:
             schema:
               $ref: '#/components/schemas/api-v1-team2045834793'
             examples:
+              사용자가_팀을_생성_시에/성공한다:
+                value: |-
+                  {
+                    "name" : "구구구",
+                    "content" : "안녕하세요, 구구구입니다!"
+                  }
               team-controller-v1-docs-test/팀_생성_api_문서를_생성한다:
                 value: |-
                   {
@@ -50,12 +56,6 @@ paths:
                       "id" : 2,
                       "role" : "Mate"
                     } ]
-                  }
-              사용자가_팀을_생성_시에/성공한다:
-                value: |-
-                  {
-                    "name" : "구구구",
-                    "content" : "안녕하세요, 구구구입니다!"
                   }
       responses:
         "201":
@@ -70,7 +70,7 @@ paths:
       tags:
       - Team
       summary: 팀 조회
-      description: 해당 팀 정보를 조회합니다.
+      description: 팀 정보를 조회합니다.
       operationId: team-controller-v1-docs-test/팀_조회_api_문서를_생성한다사용자가_팀을_조회_시에/성공한다
       parameters:
       - name: id
@@ -78,8 +78,7 @@ paths:
         description: 팀 아이디
         required: true
         schema:
-          type: integer
-          format: int32
+          type: string
       responses:
         "200":
           description: "200"
@@ -93,6 +92,12 @@ paths:
               schema:
                 $ref: '#/components/schemas/api-v1-team-id-1408924108'
               examples:
+                사용자가_팀을_조회_시에/성공한다:
+                  value: |-
+                    {
+                      "name" : "구구구",
+                      "content" : "안녕하세요, 구구구입니다!"
+                    }
                 team-controller-v1-docs-test/팀_조회_api_문서를_생성한다:
                   value: |-
                     {
@@ -100,17 +105,11 @@ paths:
                       "content" : "코드 한 줄에 커피 한 잔, 우리는 카페인으로 움직이는 팀입니다!",
                       "creatorId" : 1
                     }
-                사용자가_팀을_조회_시에/성공한다:
-                  value: |-
-                    {
-                      "name" : "구구구",
-                      "content" : "안녕하세요, 구구구입니다!"
-                    }
     delete:
       tags:
       - Team
       summary: 팀 제거
-      description: 해당 팀을 제거합니다.
+      description: 팀을 제거합니다.
       operationId: team-controller-v1-docs-test/팀_제거_api_문서를_생성한다사용자가_팀을_제거_시에/성공한다
       parameters:
       - name: id
@@ -118,8 +117,7 @@ paths:
         description: 제거할 팀 ID
         required: true
         schema:
-          type: integer
-          format: int32
+          type: string
       responses:
         "204":
           description: "204"
@@ -184,12 +182,12 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/api-v1-user-login-434021498'
+              $ref: '#/components/schemas/api-v1-user-login-1192987719'
             examples:
               사용자가_로그인_시에/성공한다:
                 value: |-
                   {
-                    "username" : "brown",
+                    "email" : "brown@gu99.com",
                     "password" : "test1234!@#$"
                   }
               login-controller-v1-docs-test/로그인_api_문서를_생성한다:
@@ -230,26 +228,23 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/api-v1-project-projectId-status1840086195'
+                $ref: '#/components/schemas/api-v1-project-projectId-status1220278061'
               examples:
                 status-controller-v1-docs-test/상태_목록조회_api_문서를_생성한다:
                   value: |-
-                    {
-                      "hasNext" : false,
-                      "items" : [ {
-                        "statusId" : 1,
-                        "projectId" : 1,
-                        "name" : "대기중",
-                        "colorCode" : "FFFFFF",
-                        "sortOrder" : 0
-                      }, {
-                        "statusId" : 2,
-                        "projectId" : 1,
-                        "name" : "진행중",
-                        "colorCode" : "FFFFF0",
-                        "sortOrder" : 1
-                      } ]
-                    }
+                    [ {
+                      "statusId" : 1,
+                      "projectId" : 1,
+                      "name" : "대기중",
+                      "colorCode" : "FFFFFF",
+                      "sortOrder" : 0
+                    }, {
+                      "statusId" : 2,
+                      "projectId" : 1,
+                      "name" : "진행중",
+                      "colorCode" : "FFFFF0",
+                      "sortOrder" : 1
+                    } ]
     post:
       tags:
       - Status
@@ -325,26 +320,23 @@ paths:
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/api-v1-project-projectId-task1816323921'
+                $ref: '#/components/schemas/api-v1-project-projectId-task1608277617'
               examples:
                 task-controller-v1-docs-test/일정_전체조회_api_문서를_생성한다:
                   value: |-
-                    {
-                      "hasNext" : false,
-                      "items" : [ {
-                        "taskId" : 1,
-                        "statusId" : 1,
-                        "taskName" : "환경설정 마치기",
-                        "userNickname" : "Hello나는팀원1",
-                        "sortOrder" : 1
-                      }, {
-                        "taskId" : 2,
-                        "statusId" : 1,
-                        "taskName" : "프로젝트 일정 등록 기능 구현",
-                        "userNickname" : "Hello2",
-                        "sortOrder" : 1
-                      } ]
-                    }
+                    [ {
+                      "taskId" : 1,
+                      "statusId" : 1,
+                      "taskName" : "환경설정 마치기",
+                      "userNickname" : "Hello나는팀원1",
+                      "sortOrder" : 1
+                    }, {
+                      "taskId" : 2,
+                      "statusId" : 1,
+                      "taskName" : "프로젝트 일정 등록 기능 구현",
+                      "userNickname" : "Hello2",
+                      "sortOrder" : 1
+                    } ]
     post:
       tags:
       - Task
@@ -736,12 +728,12 @@ components:
     api-v1-team-id-1408924108:
       type: object
       properties:
-        name:
-          type: string
-          description: 팀 이름
         creatorId:
           type: number
           description: 팀 생성자 ID
+        name:
+          type: string
+          description: 팀 이름
         content:
           type: string
           description: 팀 소개
@@ -757,48 +749,29 @@ components:
         colorCode:
           type: string
           description: 색상 코드
-    api-v1-project-projectId-task1816323921:
-      type: object
-      properties:
-        hasNext:
-          type: boolean
-          description: 다음 페이지 존재 여부
-        items:
-          type: array
-          description: 프로젝트 내에 존재하는 일정 목록
-          items:
-            type: object
-            properties:
-              statusId:
-                type: number
-                description: 프로젝트 상태 식별자
-              sortOrder:
-                type: number
-                description: 정렬 순서
-              userNickname:
-                type: string
-                description: 회원 이름
-              taskName:
-                type: string
-                description: 일정 이름
-              taskId:
-                type: number
-                description: 프로젝트 일정 식별자
-    api-v1-user-login-434021498:
-      type: object
-      properties:
-        password:
-          type: string
-          description: 비밀번호
-        username:
-          type: string
-          description: 아이디
+    api-v1-project-projectId-status1220278061:
+      type: array
+      items:
+        type: object
+        properties:
+          statusId:
+            type: number
+            description: 상태 식별자
+          sortOrder:
+            type: number
+            description: 정렬 순서
+          name:
+            type: string
+            description: 상태 이름
+          colorCode:
+            type: string
+            description: 색상 코드
+          projectId:
+            type: number
+            description: 프로젝트 식별자
     api-v1-team2045834793:
       type: object
       properties:
-        name:
-          type: string
-          description: 팀 이름
         coworkers:
           type: array
           description: 초대된 사용자 목록
@@ -814,6 +787,9 @@ components:
         creatorId:
           type: number
           description: 팀 생성자 ID
+        name:
+          type: string
+          description: 팀 이름
         content:
           type: string
           description: 팀 소개
@@ -826,33 +802,38 @@ components:
         content:
           type: string
           description: 팀 소개
-    api-v1-project-projectId-status1840086195:
+    api-v1-user-login-1192987719:
       type: object
       properties:
-        hasNext:
-          type: boolean
-          description: 다음 페이지 존재 여부
-        items:
-          type: array
-          description: 프로젝트 내에 존재하는 상태 목록
-          items:
-            type: object
-            properties:
-              statusId:
-                type: number
-                description: 상태 식별자
-              sortOrder:
-                type: number
-                description: 정렬 순서
-              name:
-                type: string
-                description: 상태 이름
-              colorCode:
-                type: string
-                description: 색상 코드
-              projectId:
-                type: number
-                description: 프로젝트 식별자
+        password:
+          type: string
+          description: 비밀번호
+        email:
+          type: string
+          description: 이메일
+        username:
+          type: string
+          description: 아이디
+    api-v1-project-projectId-task1608277617:
+      type: array
+      items:
+        type: object
+        properties:
+          statusId:
+            type: number
+            description: 프로젝트 상태 식별자
+          sortOrder:
+            type: number
+            description: 정렬 순서
+          userNickname:
+            type: string
+            description: 회원 이름
+          taskName:
+            type: string
+            description: 일정 이름
+          taskId:
+            type: number
+            description: 프로젝트 일정 식별자
     api-v1-project-projectId-task-taskId581167037:
       type: object
       properties:
